# video-semantic-segmentation-network

./: .gitignore  README.md  convert_keras_to_tensorflow_pb.py  environment.yml  generate_resnet_features.py  inference_resnet_segnet.py  inference_resnet_segnet_video.py  pyproject.toml  train_decision_network.py
list/: test_file_list.txt  train_file_list.txt  train_file_list_mini.txt  val_file_list.txt
model/: __init__.py  basic_models.py  decisionmodel.py  flownetmodel.py  model_utils.py  resnet50.py  segnet.py
tools/: camvid_utils.py  flowlib.py  image_reader.py  resnet_segnet_utils.py
